--- a/ndcube/asdf/resources/schemas/skycoordtablecoordinate-1.0.0.yaml
+++ b/ndcube/asdf/resources/schemas/skycoordtablecoordinate-1.0.0.yaml
@@ -20,6 +20,6 @@ properties:
   physical_types:
     type: array
 
-required: ["table"]
+required: ["table", "mesh"]
 additionalProperties: false
 ...
