--- a/ndcube/asdf/resources/schemas/timetablecoordinate-1.0.0.yaml
+++ b/ndcube/asdf/resources/schemas/timetablecoordinate-1.0.0.yaml
@@ -20,6 +20,6 @@ properties:
   reference_time:
     tag: "tag:stsci.edu:asdf/time/time-*"
 
-required: ["table"]
+required: ["table", "reference_time"]
 additionalProperties: false
 ...
