--- a/ndcube/asdf/resources/schemas/quantitytablecoordinate-1.0.0.yaml
+++ b/ndcube/asdf/resources/schemas/quantitytablecoordinate-1.0.0.yaml
@@ -26,6 +26,6 @@ properties:
   physical_types:
     type: array
 
-required: ["table", "unit"]
+required: ["table", "unit", "mesh"]
 additionalProperties: false
 ...
