--- a/ndcube/asdf/resources/schemas/reorderedwcs-1.0.0.yaml
+++ b/ndcube/asdf/resources/schemas/reorderedwcs-1.0.0.yaml
@@ -1,7 +1,7 @@
 %YAML 1.1
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
-id: "asdf://sunpy.org/ndcube/schemas/resampledwcs-1.0.0"
+id: "asdf://sunpy.org/ndcube/schemas/reorderedwcs-1.0.0"
 
 title:
   Represents the ndcube ReorderedLowLevelWCS object
@@ -20,6 +20,6 @@ properties:
   world_order:
     type: array
 
-required: [wcs]
+required: ["wcs", "pixel_order", "world_order"]
 additionalProperties: false
 ...
