--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,8 +31,7 @@ tests-optional = [
   "specutils>=1.12.0",
   "sunpy>=6.1.0",
 ]
-tests = [
-  "ndcube[all,tests-optional]",
+tests-only = [
   "pytest-astropy",
   "pytest-cov",
   "pytest-doctestplus",
@@ -42,7 +41,7 @@ tests = [
   "pytest-memray; sys_platform != 'win32'",
 ]
 tests = [
-  "ndcube[plotting,reproject,tests-only,asdf-tests]",
+  "ndcube[plotting,reproject,tests-only,tests-optional,asdf-tests]",
 ]
 docs = [
   "ndcube[all,tests-optional]",
