--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ requires =
     tox-pypi-filter>=0.14
 envlist =
     py{311,312,313,314}
+    py313-minimal
     py314-devdeps
     py311-oldestdeps
     codestyle
@@ -63,8 +64,8 @@ deps =
     figure-!devdeps: scipy
 # The following indicates which extras_require will be installed
 extras =
-    !oldestdeps: tests
-    oldestdeps: tests-only
+    minimal: tests-minimal
+    !minimal: tests
 commands_pre =
     oldestdeps: minimum_dependencies ndcube --extras plotting reproject asdf tests-optional --filename requirements-min.txt
     oldestdeps: pip install -r requirements-min.txt
