Revert "Try this"
This reverts commit ba8e4957a93dd6384035572098420993fd8acd67.

--- a/ndcube/asdf/resources/schemas/ndcollection-1.0.0.yaml
+++ b/ndcube/asdf/resources/schemas/ndcollection-1.0.0.yaml
@@ -21,7 +21,7 @@ properties:
           - tag: "tag:sunpy.org:ndcube/ndcube-1.*"
           - tag: "tag:sunpy.org:ndcube/ndcubesequence-1.*"
           # Allow any other objects here as we don't want to restrict what people can save
-          - {}
+          - type: object
   aligned_axes:
     anyOf:
     - type: object
