--- a/tox.ini
+++ b/tox.ini
@@ -68,7 +68,8 @@ extras =
     !minimal: tests
 commands_pre =
     oldestdeps: minimum_dependencies ndcube --extras plotting reproject asdf tests-optional --filename requirements-min.txt
-    oldestdeps: pip install -r requirements-min.txt
+    # Pin down pyparsing because of incompatibility with old mpl
+    oldestdeps: pip install -r requirements-min.txt pyparsing<3.3
     oldestdeps: python -c "import astropy.time; astropy.time.update_leap_seconds()"
     pip freeze --all --no-input
 commands =
